Fix sidebar scroll on firefox

--- a/src/icp/apps/beekeepers/sass/05_base/_base.scss
+++ b/src/icp/apps/beekeepers/sass/05_base/_base.scss
@@ -33,6 +33,7 @@ body {
 main {
     display: flex;
     flex: 1;
+    overflow-y: auto;
 }
 
 strong {
